Closed Bug 1894440 Opened 5 months ago Closed 5 months ago

Crash in [@ AsyncShutdownTimeout | profile-before-change | BounceTrackingProtectionStorage: Flushing to disk]

Categories

(Core :: Privacy: Anti-Tracking, defect)

defect

Tracking

()

RESOLVED FIXED
127 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox125 --- unaffected
firefox126 --- unaffected
firefox127 --- fixed

People

(Reporter: aryx, Assigned: pbz)

References

(Blocks 1 open bug)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

3 crash reports from 3 different installs, all with Firefox 127.0a1, oldest build ID is 20240423214125. Both Windows and Linux are affected.

Crash report: https://crash-stats.mozilla.org/report/index/87a08c6e-6630-49f8-bb15-1bff80240501

MOZ_CRASH Reason: [Parent 17312, Main Thread] ###!!! ABORT: file /builds/worker/checkouts/gecko/toolkit/components/antitracking/bouncetrackingprotection/BounceTrackingProtectionStorage.cpp:433

Top 10 frames:

0  xul.dll  MOZ_Crash(char const*, int, char const*)  mfbt/Assertions.h:317
0  xul.dll  Abort(char const*)  xpcom/base/nsDebugImpl.cpp:512
0  xul.dll  NS_DebugBreak(unsigned int, char const*, char const*, char const*, int)  xpcom/base/nsDebugImpl.cpp:495
1  xul.dll  nsDebugImpl::Abort(char const*, int)  xpcom/base/nsDebugImpl.cpp:129
2  xul.dll  XPTC__InvokebyIndex
3  xul.dll  NS_InvokeByIndex(nsISupports*, unsigned int, unsigned int, nsXPTCVariant*)  xpcom/reflect/xptcall/md/win32/xptcinvoke_x86_64.cpp:57
3  xul.dll  CallMethodHelper::Invoke()  js/xpconnect/src/XPCWrappedNative.cpp:1621
3  xul.dll  CallMethodHelper::Call()  js/xpconnect/src/XPCWrappedNative.cpp:1174
3  xul.dll  XPCWrappedNative::CallMethod(XPCCallContext&, XPCWrappedNative::CallMode)  js/xpconnect/src/XPCWrappedNative.cpp:1120
4  xul.dll  XPC_WN_CallMethod(JSContext*, unsigned int, JS::Value*)  js/xpconnect/src/XPCWrappedNativeJSOps.cpp:966
Blocks: btp-nightly, btp
Assignee: nobody → pbz
Status: NEW → ASSIGNED
Pushed by pzuhlcke@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/3142552647f6 Switch to Monitor#NotifyAll to fix potential deadlock. r=bvandersloot,anti-tracking-reviewers
Status: ASSIGNED → RESOLVED
Closed: 5 months ago
Resolution: --- → FIXED
Target Milestone: --- → 127 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: