Bug 1894440 - Switch to Monitor#NotifyAll to fix potential deadlock. r=bvandersloot,anti-tracking-reviewers

Differential Revision: https://phabricator.services.mozilla.com/D209262